authentication flow refactored